--- a/projects/common-primeng/src/lib/components/input/input.component.html
+++ b/projects/common-primeng/src/lib/components/input/input.component.html
@@ -1,9 +1,4 @@
-<div class="es-input">
-  <label [for]="id" class="es-input__label" *ngIf="label">
-    {{label}}
-    <span *ngIf="required" class="es-input__require-mark"> *</span>
-    <i *ngIf="info" class="pi pi-info es-input__info" pTooltip="{{info}}" tooltipPosition="top"></i>
-  </label>
+<esp-base-element [id]="id" [label]="label" [required]="required" [info]="info" [errorText]="errorText" [(ngModel)]="value">
   <span [ngClass]="{'p-input-icon-right': iconPosition === 'right', 'p-input-icon-left': iconPosition === 'left'}"
         [ngStyle]="{'width': fullWidth ? '100%': 'auto'}">
       <i [class]="icon"></i>
@@ -19,6 +14,5 @@
              [ngClass]="{'ng-dirty ng-invalid': isNotValid}"
              [ngStyle]="{'width': fullWidth ? '100%': 'auto'}"/>
       <div *ngIf="viewMode" class="es-input__value-only">{{value}}</div>
-    </span>
-</div>
-<small *ngIf="isNotValid && errorText" [id]="id + '-help'" class="p-error block">{{errorText}}</small>
+  </span>
+</esp-base-element>
